# react-native-expo-using-native-with-rust

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/marco/flat/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/marco/flat/: HelloJavaModule.java  HelloJavaPackage.java  MainActivity.java  MainApplication.java  TextToSpeachModule.java  TextToSpeachPackage.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/marco/flat/: ReactNativeFlipper.java
ios/: Podfile
ios/flat/: Info.plist
ios/flat.xcodeproj/: project.pbxproj
ios/flat.xcodeproj/xcshareddata/xcschemes/: flat.xcscheme
ios/flat/Supporting/: Expo.plist
rust/crab/: Cargo.toml  build.sh
rust/crab/.cargo/: config.toml
rust/crab/src/: lib.rs
rust/flat/: Cargo.toml  build.sh
rust/flat/.cargo/: config.toml
rust/flat/src/: convert.rs  lib.rs
src/components/: Conveter.tsx  Provider.tsx  index.ts
src/utils/: inddex.ts  native_module.ts
