[package]
name = "crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1", optional = true, default-features = false}

[lib]
name = "crab"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["jni"]
